<resources>
    <string name="app_name">Body Mass Index</string>
    <string name="lblWeight">Weight</string>
    <string name="lblHeight">Height</string>
    <string name="btnReset">RESET</string>
    <string name="btnCalculate">CALCULATE BMI</string>
    <string name="main_bmi">BMI: %1$.1f %2$s</string>
    <string name="txtWeight">(kg)</string>
    <string name="txtHeight">(m)</string>
    <string name="main_low_weight">Underweight</string>
    <string name="main_normal_weight">Normal</string>
    <string name="main_overweight">Overweight</string>
    <string name="main_obesity_grade_1">Obese class 1</string>
    <string name="main_obesity_grade_2">Obese class 2</string>
    <string name="main_obesity_grade_3">Obese class 3</string>
    <string name="main_invalid_weight">Invalid height</string>
    <string name="main_invalid_height">Invalid weight</string>
</resources>
